Bug 95393 - ELAN1000 touchpad erratic pointer after 1.2.4 -> 1.3.0 upgrade
Summary: ELAN1000 touchpad erratic pointer after 1.2.4 -> 1.3.0 upgrade
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: 1.3.0
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
: 95437 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-13 20:42 UTC by János Illés
Modified: 2016-05-19 00:13 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
evemu-describe output (4.04 KB, text/plain)
2016-05-13 20:42 UTC, János Illés
Details
one short movement with cursor skips (38.76 KB, text/plain)
2016-05-17 05:47 UTC, János Illés
Details

Description János Illés 2016-05-13 20:42:44 UTC
Created attachment 123733 [details]
evemu-describe output

Hi!

After upgrading libinput to 1.3.0 from 1.2.4 in Arch Linux, the touchpad pointer movement became very erratic, the cursor jumps around. It feels like it barely detects my finger, instead of smooth movement the pointer skips and jumps. 
After downgrading libinput to 1.2.4 the pointer smoothly follows my finger.  

I've attached evemu-describe output.
Comment 1 Peter Hutterer 2016-05-16 01:48:55 UTC
can you bisect this please? if you have the gtk+3.0-devel headers installed you'll get a ./tools/event-gui binary that reads events directly from libinput and should reproduce the wobbling. bisecting is then just a matter of compiling libinput, starting that tool and testing - no X server restart required.
Comment 2 János Illés 2016-05-16 19:30:16 UTC
Hi, thank you, the event-gui made bisecting really easy. 

aa901211252f0e492893a56d3ec368fbe327255b is the first bad commit
commit aa901211252f0e492893a56d3ec368fbe327255b
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Mar 30 11:36:59 2016 +1000

    touchpad: reset the motion history on significant negative pressure changes
Comment 3 Peter Hutterer 2016-05-17 00:05:10 UTC
hmm, odd. I wonder what the pressure changes are like. Please run evemu-record for one short motion that reproduces the skipping and attach the output here. Likely we'll have to put an exclusion in for that feature on your device (or adjust the parameters)
Comment 4 Peter Hutterer 2016-05-17 00:58:39 UTC
*** Bug 95437 has been marked as a duplicate of this bug. ***
Comment 5 Lisandro Pin 2016-05-17 01:04:46 UTC
Bug 95437 has a short evemu-record of a couple of horizontal trackpad swipes reproducing this issue, FWIW.
Comment 6 Peter Hutterer 2016-05-17 01:12:01 UTC
Bug 95437 has a recording and the pressure delta is 8 as opposed to the expected value 7 we currently have. On the Red Hat bugzilla the reporter has an Atmel and sees changes of ca 18, so we definitely need to update the hardcoded value here.

https://bugzilla.redhat.com/show_bug.cgi?id=1335249
Comment 7 János Illés 2016-05-17 05:47:40 UTC
Created attachment 123818 [details]
one short movement with cursor skips

Here is mine.
Comment 8 Peter Hutterer 2016-05-17 21:27:05 UTC
right, same here with a delta of 8 as opposed to 7.
Comment 10 Peter Hutterer 2016-05-19 00:13:15 UTC
commit 2f5231cc88fccf389a78270d827f6c9201b86794
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed May 18 07:35:36 2016 +1000

    touchpad: only use negative pressure change check on Lenovo *50 and *60 series


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.